# complementary

./: .clang-format  .gitattributes  .gitignore  .vsls.json  Main.cpp  Makefile  README.md  THIRD_PARTY_LICENSES.txt  generate.bat  meson.build  start.bat  start.sh
.github/workflows/: add-issues-to-project.yml  ci-checks.yml
assets/: Background.rpp  BackgroundDark.rpp  Effects.rpp-bak  Music.song  font.json  player.cmpl  player_old.cmpl  sources.txt
assets/maps/: Level1.cmtm  Level2.cmtm  Level3.cmtm  LevelHARD.cmtm  ability_set_2.cmom  ability_set_2.cmtm  draft.cmtm  emptySMALL.cmtm  hard_map011_intro_GRAY.cmom  level_select.cmom  level_select.cmtm  level_select_OLD.cmtm  map0.cmom  map0.cmtm  map00.cmtm  map001.cmom  map001_intro_SWITCH.cmom  map001_intro_SWITCH.cmtm  map002.cmom  map002.cmtm  map003_intro_SPIKES.cmtm  map004.cmom  map005.cmtm  map005_intro_DASH.cmom  map005_intro_SWITCHING_SPIKES.cmom  map005_intro_SWITCHING_SPIKES.cmtm  map006_intro_DASH.cmom  map006_intro_DASH.cmtm  map006_intro_WALLJUMP.cmom  map007_intro_DASH.cmtm  map007_intro_DOOR.cmom  map007_intro_WALLJUMP.cmom  map007_intro_WALLJUMP.cmtm  map008.cmom  map008_intro_DOOR.cmtm  map009.cmom  map009_intro_GRAY.cmtm  map009_intro_GREY.cmom  map009_intro_GREY.cmtm  map010.cmom  (+70 more)
assets/maps/drafts/: LevelHARD.cmom  draft.cmom  empty.cmom  empty.cmtm  emptyBIG.cmtm  hard_map011_intro_GRAY.cmtm  map009.cmom  map009.cmtm  new.cmom  new.cmtm  new4.cmtm  test.cmtm  testWIND.cmom  testWINDSOUND.cmom  testWINDSOUND.cmtm  the_wall.cmtm  wusi.cmom  wusi.cmtm
assets/particlesystems/: background.cmob  colorblock.cmob  dash.cmob  death.cmob  dissolve.cmob  door.cmob  glider.cmob  goal.cmob  jump.cmob  key.cmob  loseability.cmob  newability.cmob  switch.cmob  switchobjectOFF.cmob  switchobjectON.cmob  test.cmob  titleeffect.cmob  walk.cmob  walljump.cmob  walljumpside.cmob  wallstick.cmob  wind.cmob  windTEST.cmob
assets/shaders/: editor.fs  font.fs  font.vs  glow.fs  glow.vs  lineMixer.fs  lineMixer.vs  lineMixerSampled.fs  mixer.fs  object.vs  particle.fs  particle.vs  player.fs  player.vs  test.fs  test.vs  texture.fs  texture.vs  tilemap.vs
assets/sounds/: Sources.txt  dash_.ogg.reapeaks
misc/: Effects.rpp  Music.song  SoundSources.txt  sources.txt
src/: AbilityCutscene.cpp  AbilityCutscene.h  Arguments.cpp  Arguments.h  Clock.cpp  Clock.h  Game.cpp  Game.h  GoalCutscene.cpp  GoalCutscene.h  Input.cpp  Input.h  Main.cpp  Menu.cpp  Menu.h  NonCopyable.h  Player.cpp  Player.h  Profiler.cpp  Profiler.h  Savegame.cpp  Savegame.h  TextUtils.cpp  TextUtils.h  Utils.cpp  Utils.h
src/graphics/: Buffer.cpp  Buffer.h  Color.cpp  Color.h  Font.cpp  Font.h  RenderState.cpp  RenderState.h  TextureRenderer.cpp  TextureRenderer.h  Window.cpp  Window.h
src/graphics/gl/: Glew.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
src/imgui/: ImGuiUtils.cpp  ImGuiUtils.h
src/math/: Matrix.cpp  Matrix.h  Random.cpp  Random.h  Vector.cpp  Vector.h
src/objects/: ColorObject.cpp  ColorObject.h  DoorObject.cpp  DoorObject.h  KeyObject.cpp  KeyObject.h  LevelDoorObject.cpp  LevelDoorObject.h  LevelTagObject.cpp  LevelTagObject.h  MovingObject.cpp  MovingObject.h  MovingSwitchObject.cpp  MovingSwitchObject.h  Object.cpp  Object.h  ObjectRenderer.cpp  ObjectRenderer.h  Objects.cpp  Objects.h  TileEditorProp.cpp  TileEditorProp.h  TutorialObject.cpp  TutorialObject.h  WindObject.cpp  WindObject.h
src/particles/: ParticleSystem.cpp  ParticleSystem.h  Particles.cpp  Particles.h
src/player/: Ability.cpp  Ability.h  Face.cpp  Face.h  Player.cpp  Player.h
src/sound/: SoundManager.cpp  SoundManager.h  audio.c  audio.h
src/tilemap/: Tile.cpp  Tile.h  Tilemap.cpp  Tilemap.h  TilemapEditor.cpp  TilemapEditor.h  Tiles.cpp  Tiles.h
src/tilemap/tiles/: BoxTile.cpp  BoxTile.h  DoorTile.cpp  DoorTile.h  GoalTile.cpp  GoalTile.h  KeyTile.cpp  KeyTile.h  SpawnTile.cpp  SpawnTile.h  SpikeTile.cpp  SpikeTile.h  Tile.cpp  Tile.h
subprojects/: glew.wrap  imgui.wrap  libjpeg.wrap  libogg.wrap  sdl2.wrap  sdl2_image.wrap  sdl2_mixer.wrap  stb.wrap  vorbis.wrap  zlib.wrap
subprojects/packagefiles/SDL2-2.0.12/: meson.build
subprojects/packagefiles/SDL2-2.0.12/src/joystick/windows/: SDL_windowsjoystick.c  SDL_windowsjoystick_c.h  meson.build
subprojects/packagefiles/SDL2-2.0.12/src/video/: meson.build
subprojects/packagefiles/SDL2-2.0.3/: meson.build
subprojects/packagefiles/SDL2_image-2.0.5/: meson.build
subprojects/packagefiles/SDL2_mixer-2.0.4/: meson.build
subprojects/packagefiles/glew-2.1.0/: meson.build
subprojects/packagefiles/imgui-1.81/: meson.build
subprojects/packagefiles/jpeg-9c/: meson.build
subprojects/packagefiles/libogg-1.3.2/src/: meson.build
subprojects/packagefiles/libpng-1.6.37/: meson.build
subprojects/packagefiles/libvorbis-1.3.5/: meson.build
subprojects/packagefiles/libvorbis-1.3.5/lib/: meson.build
subprojects/packagefiles/stb/: meson.build  stb_tilemap_editor.h
subprojects/packagefiles/zlib-1.2.11/: meson.build
tools/: create.py  format.sh  install-hooks.sh  save_statistics.py
